[gd_scene load_steps=19 format=2]

[ext_resource path="res://player/playerAnimation.tscn" type="PackedScene" id=1]
[ext_resource path="res://player/player.gd" type="Script" id=2]
[ext_resource path="res://player/playerAnimation.gd" type="Script" id=3]
[ext_resource path="res://gfx/background/bg_layer1.png" type="Texture" id=4]
[ext_resource path="res://gfx/background/bg_layer2.png" type="Texture" id=5]
[ext_resource path="res://gfx/background/bg_layer3.png" type="Texture" id=6]
[ext_resource path="res://gfx/background/bg_layer4.png" type="Texture" id=7]
[ext_resource path="res://sfx/jump1.ogg" type="AudioStream" id=8]
[ext_resource path="res://sfx/pain.ogg" type="AudioStream" id=9]
[ext_resource path="res://sfx/fall_down.wav" type="AudioStream" id=10]
[ext_resource path="res://sfx/player_ready.wav" type="AudioStream" id=11]
[ext_resource path="res://gfx/particles/portal_yellowParticle.png" type="Texture" id=12]
[ext_resource path="res://sfx/jump_pad.wav" type="AudioStream" id=13]

[sub_resource type="CapsuleShape2D" id=1]
radius = 60.0
height = 82.0

[sub_resource type="Animation" id=4]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=5]
resource_name = "Ready"
length = 1.377

[sub_resource type="Animation" id=3]
resource_name = "Vanish"
step = 1.0
tracks/0/type = "value"
tracks/0/path = NodePath(".:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( 0, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("PlayerAnimation:self_modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}

[sub_resource type="ParticlesMaterial" id=6]
emission_shape = 1
emission_sphere_radius = 128.0
flag_disable_z = true
gravity = Vector3( 0, 0, 0 )
orbit_velocity = 0.1
orbit_velocity_random = 0.0

[node name="Player" type="KinematicBody2D"]
position = Vector2( 500, 276 )
collision_mask = 14
script = ExtResource( 2 )
__meta__ = {
"_edit_group_": true
}

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2( 1000, 0 )
current = true
zoom = Vector2( 3, 3 )
limit_left = -1024
limit_top = -1024
limit_smoothed = true
smoothing_enabled = true

[node name="ParallaxBackground" type="ParallaxBackground" parent="Camera2D"]
scroll_ignore_camera_zoom = true

[node name="ParallaxLayer" type="ParallaxLayer" parent="Camera2D/ParallaxBackground"]
motion_offset = Vector2( 0, -1000 )
motion_mirroring = Vector2( 2048, 2048 )

[node name="TextureRect" type="TextureRect" parent="Camera2D/ParallaxBackground/ParallaxLayer"]
margin_right = 40.0
margin_bottom = 40.0
texture = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ParallaxLayer2" type="ParallaxLayer" parent="Camera2D/ParallaxBackground"]
motion_scale = Vector2( 0.25, 1 )
motion_mirroring = Vector2( 2048, 0 )

[node name="TextureRect" type="TextureRect" parent="Camera2D/ParallaxBackground/ParallaxLayer2"]
margin_right = 40.0
margin_bottom = 40.0
texture = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ParallaxLayer3" type="ParallaxLayer" parent="Camera2D/ParallaxBackground"]
motion_scale = Vector2( 0.5, 1 )
motion_mirroring = Vector2( 2048, 0 )

[node name="TextureRect" type="TextureRect" parent="Camera2D/ParallaxBackground/ParallaxLayer3"]
margin_right = 40.0
margin_bottom = 40.0
texture = ExtResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ParallaxLayer4" type="ParallaxLayer" parent="Camera2D/ParallaxBackground"]
motion_scale = Vector2( 0.75, 1 )
motion_mirroring = Vector2( 2048, 0 )

[node name="TextureRect" type="TextureRect" parent="Camera2D/ParallaxBackground/ParallaxLayer4"]
margin_right = 40.0
margin_bottom = 40.0
texture = ExtResource( 7 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
shape = SubResource( 1 )

[node name="PlayerAnimation" parent="." instance=ExtResource( 1 )]
animation = "hurt"
script = ExtResource( 3 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/RESET = SubResource( 4 )
anims/Ready = SubResource( 5 )
anims/Vanish = SubResource( 3 )

[node name="PlayerReadyParticles" type="Particles2D" parent="."]
amount = 24
lifetime = 2.0
randomness = 1.0
process_material = SubResource( 6 )
texture = ExtResource( 12 )

[node name="FallDownSFX" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 10 )
volume_db = -5.0

[node name="JumpSFX" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 8 )
volume_db = -5.0

[node name="JumpPadSFX" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 13 )
volume_db = -5.0

[node name="PainSFX" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 9 )
volume_db = -5.0

[node name="PlayerReadySFX" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 11 )
volume_db = -5.0

[connection signal="animate" from="." to="PlayerAnimation" method="_on_Player_animate"]
